--- a/Api/package.json
+++ b/Api/package.json
@@ -6,11 +6,12 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js",
-    "start": "nodemon index.js"
+    "dev": "node --trace-warnings index.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1"
   },
   "devDependencies": {
