--- a/Api/package.json
+++ b/Api/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "nodejs",
+  "name": "api",
   "version": "1.0.0",
-  "description": "nodejs",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon",
+    "build": "tsc -p ."
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.1",
-    "ws": "^8.14.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.2",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
