--- a/Api/package.json
+++ b/Api/package.json
@@ -9,13 +9,15 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@types/ws": "^8.5.12",
     "bcryptjs": "2.4.3",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.5.2"
+    "mongoose": "8.5.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
