--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,19 @@ services:
     image: nginx:stable-alpine3.19-slim
     container_name: client_chat
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - ./client/dist:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - api
+      - api-chat
 
-  api:
+  api-chat:
     build:
       context: ./api
       dockerfile: Dockerfile
     image: api_chat:v0.2
     container_name: api_chat
-    ports:
-      - "4040:4040"
     depends_on:
       - db
 
@@ -28,3 +26,5 @@ services:
     container_name: db_chat
     ports:
       - "27017:27017"
+    volumes:
+      - ./mongo-data:/data/db
