--- a/nginx.conf
+++ b/nginx.conf
@@ -11,14 +11,14 @@ http {
 
   server {
     listen 80;
-    server_name serverortega.ddns.net;
+    server_name localhost;
 
     root /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
 
-    location /api/ {
-      proxy_pass http://api:4040/api/;
+    location /api-chat/ {
+      proxy_pass http://api-chat:80/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
@@ -26,6 +26,19 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api-wss/ {
+      proxy_pass http://api-chat:80/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      rewrite ^/api-wss/(.*)$ /$1 break;
     }
 
     error_page   500 502 503 504  /50x.html;
