--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
     image: nginx:stable-alpine3.19-slim
     container_name: client_chat
     ports:
-      - "8080:80"
+      - "443:443"
     volumes:
       - ./client/dist:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./certs:/opt
     depends_on:
       - api-chat
 
@@ -19,12 +20,10 @@ services:
     image: api_chat:v0.2
     container_name: api_chat
     depends_on:
-      - db
+      - db-chat
 
-  db:
+  db-chat:
     image: mongo:latest
     container_name: db_chat
-    ports:
-      - "27017:27017"
     volumes:
       - ./mongo-data:/data/db
