--- a/nginx.conf
+++ b/nginx.conf
@@ -10,8 +10,11 @@ http {
   keepalive_timeout  65;
 
   server {
-    listen 80;
-    server_name localhost;
+    listen 443 ssl;
+    server_name serverortega.ddns.net;
+
+    ssl_certificate /opt/cert1.pem;
+    ssl_certificate_key /opt/privkey1.pem;
 
     root /usr/share/nginx/html;
     index  index.html index.htm;
