--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,13 @@
     "axios": "1.7.2",
     "lodash": "4.17.21",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/lodash": "4.17.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@types/lodash": "4.17.7",
     "@typescript-eslint/eslint-plugin": "7.15.0",
     "@typescript-eslint/parser": "7.15.0",
     "@vitejs/plugin-react-swc": "3.5.0",
