--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "1.7.2",
+    "axios": "^1.7.7",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^6.26.2",
-    "sonner": "^1.5.0"
+    "react-router-dom": "6.26.2",
+    "sonner": "1.5.0"
   },
   "devDependencies": {
     "@types/lodash": "4.17.7",
@@ -32,6 +32,6 @@
     "standard": "17.1.0",
     "tailwindcss": "3.4.7",
     "typescript": "5.2.2",
-    "vite": "5.3.4"
+    "vite": "5.4.8"
   }
 }
