--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "express": "4.21.1",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4",
     "ws": "8.18.0"
   },
   "devDependencies": {
