--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "2.4.3",
+    "cookie-parser": "1.4.7",
     "express": "4.21.1",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.3",
     "sequelize": "6.37.4",
     "ws": "8.18.0",
@@ -22,9 +23,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "9.0.3",
-    "@types/bcryptjs": "^2.4.6",
+    "@types/bcryptjs": "2.4.6",
+    "@types/cookie-parser": "1.4.7",
     "@types/express": "5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/node": "22.7.5",
     "@types/ws": "8.5.12",
     "tsx": "4.19.1",
