--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "cookie-parser": "1.4.7",
+    "cors": "^2.8.5",
     "express": "4.21.1",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.3",
@@ -25,6 +26,7 @@
     "@faker-js/faker": "9.0.3",
     "@types/bcryptjs": "2.4.6",
     "@types/cookie-parser": "1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "5.0.0",
     "@types/jsonwebtoken": "9.0.7",
     "@types/node": "22.7.5",
