--- a/client/package.json
+++ b/client/package.json
@@ -10,26 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "1.7.7",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "6.27.0",
-    "sonner": "1.5.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.11.1",
-    "@types/react": "18.3.10",
-    "@types/react-dom": "18.3.0",
+    "@eslint/js": "9.13.0",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.11.1",
-    "eslint-plugin-react-hooks": "5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "0.4.12",
-    "globals": "15.9.0",
-    "postcss": "8.4.47",
-    "tailwindcss": "3.4.14",
-    "typescript": "5.5.3",
-    "typescript-eslint": "8.7.0",
-    "vite": "5.4.8"
+    "eslint": "9.13.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-refresh": "0.4.13",
+    "globals": "15.11.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "8.10.0",
+    "vite": "5.4.9"
   }
 }
