--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "8.7.3",
-    "ws": "8.18.0"
+    "ws": "8.18.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "22.8.1",
     "@types/ws": "8.5.12",
     "tsx": "4.19.2",
