--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@remixicon/react": "^4.5.0",
     "axios": "1.7.7",
+    "clsx": "^2.1.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react-swc": "3.5.0",
@@ -28,6 +33,7 @@
     "tailwindcss": "3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.10.0",
-    "vite": "5.4.9"
+    "vite": "5.4.9",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
