--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@remixicon/react": "^4.5.0",
     "axios": "1.7.7",
     "clsx": "^2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwind-variants": "^0.3.0"
   },
