--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@remixicon/react": "^4.5.0",
     "axios": "1.7.7",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sonner": "^1.7.1",
