--- a/client/package.json
+++ b/client/package.json
@@ -10,21 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@remixicon/react": "^4.5.0",
+    "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-slot": "1.1.1",
+    "@remixicon/react": "4.5.0",
     "axios": "1.7.7",
-    "clsx": "^2.1.1",
-    "emoji-picker-react": "^4.12.0",
+    "clsx": "2.1.1",
+    "emoji-picker-react": "4.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwind-variants": "^0.3.0"
+    "sonner": "1.7.1",
+    "tailwind-merge": "2.5.5",
+    "tailwind-variants": "0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
-    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/forms": "0.5.9",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react-swc": "3.5.0",
@@ -38,6 +38,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "8.10.0",
     "vite": "5.4.9",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
