--- a/client/package.json
+++ b/client/package.json
@@ -10,34 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-label": "2.1.1",
-    "@radix-ui/react-slot": "1.1.1",
-    "@remixicon/react": "4.5.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "axios": "1.7.7",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "emoji-picker-react": "4.12.0",
+    "lucide-react": "^0.471.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sonner": "1.7.1",
-    "tailwind-merge": "2.5.5",
-    "tailwind-variants": "0.3.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
-    "@tailwindcss/forms": "0.5.9",
+    "@types/node": "^22.10.5",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "^10.4.20",
     "eslint": "9.13.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-refresh": "0.4.13",
-    "globals": "15.11.0",
-    "postcss": "8.4.47",
+    "postcss": "^8.4.49",
     "tailwindcss": "3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.10.0",
-    "vite": "5.4.9",
-    "vite-tsconfig-paths": "5.1.4"
+    "vite": "5.4.9"
   }
 }
