--- a/client/package.json
+++ b/client/package.json
@@ -10,30 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.4",
+    "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-slot": "1.1.1",
     "axios": "1.7.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "emoji-picker-react": "4.12.0",
-    "lucide-react": "^0.471.0",
+    "lucide-react": "0.471.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sonner": "1.7.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "2.6.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
-    "@types/node": "^22.10.5",
+    "@types/node": "22.10.5",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "10.4.20",
     "eslint": "9.13.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-refresh": "0.4.13",
-    "postcss": "^8.4.49",
+    "postcss": "8.4.49",
     "tailwindcss": "3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.10.0",
