--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-slot": "1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "axios": "1.7.7",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -20,7 +21,6 @@
     "lucide-react": "0.471.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sonner": "1.7.1",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7"
   },
