--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-separator": "1.1.1",
     "@radix-ui/react-slot": "1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toast": "1.2.4",
     "axios": "1.7.7",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
